--- a/Unit_1_Intro_to_ML/Lecture_2/Numpy_Introduction.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_2/Numpy_Introduction.ipynb
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 10,
       "metadata": {
         "id": "nIbRdnBjTN0C"
       },
@@ -707,7 +707,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.contour.QuadContourSet at 0x1fff6c771d0>"
+              "<matplotlib.contour.QuadContourSet at 0x1e83dab5880>"
             ]
           },
           "execution_count": 26,
@@ -769,7 +769,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.collections.QuadMesh at 0x1fff903e910>"
+              "<matplotlib.collections.QuadMesh at 0x1e83d5f1670>"
             ]
           },
           "execution_count": 28,
@@ -801,7 +801,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x1fff6fe8450>"
+              "<matplotlib.image.AxesImage at 0x1e83e8ce5a0>"
             ]
           },
           "execution_count": 29,
@@ -887,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 32,
       "metadata": {
         "id": "jImK0xoWWHoI"
       },
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 33,
       "metadata": {
         "id": "PZqha0P3WriJ"
       },
@@ -910,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 34,
       "metadata": {
         "id": "Foc0GFiyXWlg"
       },
@@ -921,7 +921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 35,
       "metadata": {
         "id": "Z9700EEGXdAl"
       },
@@ -937,8 +937,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+      "display_name": "Python (CSCI-4521)",
+      "language": "python",
+      "name": "csci-4521-class-venv"
     },
     "language_info": {
       "codemirror_mode": {
@@ -950,7 +951,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
