--- a/Unit_1_Intro_to_ML/Lecture_1/Working_with_Pandas_and_seaborn.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_1/Working_with_Pandas_and_seaborn.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "id": "5p-mc2NS9D8n"
       },
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -130,7 +130,7 @@
               "Text(0, 0.5, 'Wage')"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -175,7 +175,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -213,7 +213,7 @@
               "Name: maritl, Length: 3000, dtype: object"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -303,7 +303,7 @@
               "Text(0, 0.5, 'Frequency')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -349,10 +349,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x20735b17e90>"
+              "<seaborn.axisgrid.PairGrid at 0x220e2d4a630>"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -377,8 +377,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+      "display_name": "Python (CSCI-4521)",
+      "language": "python",
+      "name": "csci-4521-class-venv"
     },
     "language_info": {
       "codemirror_mode": {
@@ -390,7 +391,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
