--- a/Unit_1_Intro_to_ML/Lecture_2/Day_2_Activity_Iris_Classification.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_2/Day_2_Activity_Iris_Classification.ipynb
@@ -2,22 +2,11 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "nJNoBorVdW7v"
       },
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/aksha/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -42,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,13 +41,12 @@
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/aksha/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Index(['sepal.length', 'sepal.width', 'petal.length', 'petal.width',\n",
+            "       'variety'],\n",
+            "      dtype='object')\n"
           ]
         }
       ],
@@ -80,22 +68,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "emtJBzR-eTfK"
       },
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/aksha/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Your code here, split lengths int \"Setosa\" vs not\n",
         "is_setosa = iris[(labels == \"Setosa\")]\n",
@@ -105,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -115,13 +92,11 @@
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/aksha/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Maximum petal length in Setosa: 1.9\n",
+            "Minimum petal length in other varieties: 3.0\n"
           ]
         }
       ],
@@ -145,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -155,13 +130,10 @@
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/aksha/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Classification boundary: 2.45\n"
           ]
         }
       ],
@@ -178,7 +150,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "CSCI-4521-class-venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -191,7 +164,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
