--- a/Unit_1_Intro_to_ML/Lecture_2/Day_2_Activity_Iris_Classification.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_2/Day_2_Activity_Iris_Classification.ipynb
@@ -150,9 +150,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "CSCI-4521-class-venv",
+      "display_name": "Python (CSCI-4521)",
       "language": "python",
-      "name": "python3"
+      "name": "csci-4521-class-venv"
     },
     "language_info": {
       "codemirror_mode": {
