--- a/Unit_1_Intro_to_ML/Lecture_1/Working_with_Pandas_and_seaborn.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_1/Working_with_Pandas_and_seaborn.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {
         "id": "5p-mc2NS9D8n"
       },
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -130,7 +130,7 @@
               "Text(0, 0.5, 'Wage')"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -175,7 +175,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -213,7 +213,7 @@
               "Name: maritl, Length: 3000, dtype: object"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -303,7 +303,7 @@
               "Text(0, 0.5, 'Frequency')"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -349,10 +349,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x220e2d4a630>"
+              "<seaborn.axisgrid.PairGrid at 0x2311c4e19a0>"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         },
