--- a/Unit_1_Intro_to_ML/Lecture_2/Numpy_Introduction.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_2/Numpy_Introduction.ipynb
@@ -707,7 +707,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.contour.QuadContourSet at 0x1e83dab5880>"
+              "<matplotlib.contour.QuadContourSet at 0x1be8f449490>"
             ]
           },
           "execution_count": 26,
@@ -769,7 +769,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.collections.QuadMesh at 0x1e83d5f1670>"
+              "<matplotlib.collections.QuadMesh at 0x1be902a1580>"
             ]
           },
           "execution_count": 28,
@@ -801,7 +801,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x1e83e8ce5a0>"
+              "<matplotlib.image.AxesImage at 0x1be8f4a16d0>"
             ]
           },
           "execution_count": 29,
