--- a/Unit_1_Intro_to_ML/Lecture_3/NN_Classifier.ipynb
+++ b/Unit_1_Intro_to_ML/Lecture_3/NN_Classifier.ipynb
@@ -348,7 +348,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.collections.QuadMesh at 0x1c1a7512420>"
+              "<matplotlib.collections.QuadMesh at 0x259ea2af9b0>"
             ]
           },
           "execution_count": 16,
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 19,
       "metadata": {
         "id": "fTtDY-XSxgnx"
       },
@@ -469,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 20,
       "metadata": {
         "id": "mPEg7t4ijkLG"
       },
@@ -502,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 21,
       "metadata": {
         "id": "PjSBYU0mqX0S"
       },
@@ -541,7 +541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
